# event_app

./: .dockerignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 295a733d6a77_add_sync_state_source_and_last_error.py  6353f1c40afb_added_relationship_eventtiket_with_event.py  8f3a2c1d9e10_create_event_tickets_table.py
api/: dependencies.py  events_paginator.py  models.py  provider_client.py  routes.py  schemas.py  sync_service.py  utils.py
tests/: test_events_paginator.py  test_provider_client.py  test_routes.py
