[project]
name = "event-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "apscheduler==3.11.2",
    "asyncpg==0.31.0",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "requests==2.34.0",
    "sqlalchemy==2.0.49",
    "uvicorn==0.46.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
